package com.directi.training.isp.exercise;

public interface Proximity {
    void proximityCallback();
}
