package com.directi.training.isp.exercise;

public interface TimeOut {
    void timeOutCallback();

}
